# tag-llm

./: .gitignore  README.md  pyproject.toml  train.py  train_config.yaml
examples/: pubmed.md
examples/pubmed/: README.md  train_config.yaml
tag_llm/: config.py  gnn_model.py  train.py  utils.py
tag_llm/data/: dataset.py  download.py  lm_encoder.py  utils.py
tag_llm/data/llm/: engine.py
tag_llm/data/llm/offline/: base.py  ogbn_arxiv.py  prompt.jinja  pubmed.py
tag_llm/data/llm/online/: base.py  cache.py  ogbn_arxiv.py  pubmed.py  response_model.jinja
tag_llm/data/parser/: __init__.py  base.py  ogbn_arxiv.py  pubmed.py
tag_llm/data/parser/ogbn_arxiv/: __init__.py  graph.py  parser.py
tag_llm/data/parser/pubmed/: __init__.py  graph.py  parser.py
tag_llm/trainer/: gnn_trainer.py
tape/: gnn_model.py  model.py  train_gnn.py
tape/data/: dataset.py  lm_encoder.py
tape/data/llm/: __init__.py  base.py  cache.py  engine.py  ogb_arxiv.py  pubmed.py
tape/data/llm/offline/: __init__.py  base.py  ogbn_arxiv.py  pubmed.py
tape/data/llm/online/: __init__.py  base.py  cache.py  ogb_arxiv.py  ogbn_arxiv.py  pubmed.py  response_model.jinja
tape/data/parser/: __init__.py  base.py  ogb_arxiv.py  ogbn_arxiv.py  pubmed.py
tape/trainer/: gnn_trainer.py
